Optimize the entire code-base and remove redundancy where possible

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,39 @@
 <resources>
     <string name="app_name">Ragraa</string>
+    <string name="calculator">Calculator</string>
+    <string name="projected_gpa">Projected GPA</string>
+    <string name="editing">Editing..</string>
+    <string name="course">Course</string>
+    <string name="credits">Credits</string>
+    <string name="obtained">Obtained</string>
+    <string name="relative">Relative</string>
+    <string name="mca">MCA</string>
+    <string name="show_marks">Show Marks</string>
+    <string name="grade">Grade</string>
+    <string name="absolute">Absolute</string>
+    <string name="new_version_available">A new version is available, please update.</string>
+    <string name="new_version">New version</string>
+    <string name="current_version">Current version</string>
+    <string name="home">Home</string>
+    <string name="welcome">Welcome</string>
+    <string name="last_updated">Last Updated</string>
+    <string name="login">Login</string>
+    <string name="refresh">Refresh</string>
+    <string name="marks">Marks</string>
+    <string name="attendance">Attendance</string>
+    <string name="show_profile_picture">Show profile picture</string>
+    <string name="refresh_on_startup">Refresh on startup</string>
+    <string name="roll_number">Roll Number</string>
+    <string name="password">Password</string>
+    <string name="remember_login_info">Remember login info</string>
+    <string name="current_semester">Current Semester</string>
+    <string name="absents">Absents</string>
+    <string name="total">Total</string>
+    <string name="gpa">GPA</string>
+    <string name="transcript">Transcript</string>
+    <string name="sgpa">SGPA</string>
+    <string name="cgpa">CGPA</string>
+    <string name="cancel">Cancel</string>
+    <string name="update">Update</string>
+    <string name="average">Average</string>
 </resources>
