Layout framework for past papers

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="last_updated">Last Updated</string>
     <string name="login">Login</string>
     <string name="refresh">Refresh</string>
+    <string name="past_papers">Past Papers</string>
     <string name="marks">Marks</string>
     <string name="attendance">Attendance</string>
     <string name="show_profile_picture">Show profile picture</string>
