--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="cancel">Cancel</string>
     <string name="update">Update</string>
     <string name="average">Average</string>
+    <string name="view_attendance">View Attendance</string>
 </resources>
