--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="confirmation">Confirmation</string>
     <string name="are_you_sure_you_want_to_delete_the_file">"Are you sure you want to delete the file?"</string>
     <string name="delete">Delete</string>
+    <string name="loading">Loading...</string>
 </resources>
