add background to captcha webview and optimize transitions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="average">Average</string>
     <string name="view_attendance">View Attendance</string>
     <string name="confirmation">Confirmation</string>
-    <string name="are_you_sure_you_want_to_delete_the_file">"Are you sure you want to delete the file?"</string>
     <string name="delete">Delete</string>
-    <string name="loading">Loading...</string>
+    <string name="loading_captcha">Loading CAPTCHA...</string>
+    <string name="please_solve_the_captcha_to_continue">Please solve the CAPTCHA to continue.</string>
 </resources>
