--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="home">Home</string>
     <string name="welcome">Welcome</string>
     <string name="last_updated">Last Updated</string>
+    <string name="about">About</string>
     <string name="login">Login</string>
     <string name="refresh">Refresh</string>
     <string name="past_papers">Past Papers</string>
